--- a/localisation/AML_mandalism_l_english.yml
+++ b/localisation/AML_mandalism_l_english.yml
@@ -21,10 +21,37 @@
  mandgeneric.9.t:0 "Mandalists Victorious in the Civil War"
  mandgeneric.9.d:0 "Hordes of Mandalist rebels swarmed our capital and already started reforming the government to fit their twisted and radical new ideology."
  mandgeneric.9.a:0 "An uncertain future for our country..."
- mandgeneric.9.t:0 "Mounting Casualties Angers our People"
+ mandgeneric.10.t:0 "Mounting Casualties Angers our People"
  mandgeneric.10.d:0 "With no substantial advance, and with our soldiers being sent to almost certain death, the people are starting to question the very reasons we are still fighting a lost war. There are clearly Mandalist sympathizers in the territories we still hold, and they are threatening to rebel if we don't stop this carnage."
  mandgeneric.10.a:0 "No material gain can justify the killing of our own brothers"
  mandgeneric.10.b:0 "This is nothing but the price of victory!"
+ mandgeneric.11.t:0 "Mandalist Movement Gains Traction"
+ mandgeneric.11.d:0 "Although small and relatively weak, a Mandalist movement started forming from the mainlander branches. Actively supported by the Kumari Kingdom, they demand immediate reforms to bring the country closer to their ideals."
+ mandgeneric.11.a:0 "The time for change has come"
+ mandgeneric.11.b:0 "Send the police and arrest them all!"
+ mandgeneric.12.t:0 "Mandalist Movement Thwarted in Siduru"
+ mandgeneric.12.d:0 "The incipient movement that formed in Siduru is now being crushed by the police. Any hope of the revolutionaries in our country are now lost."
+ mandgeneric.12.a:0 "Finally an end to the Orange Terror!"
+ mandgeneric.13.t:0 "Chola Demands our Territory"
+ mandgeneric.13.d:0 "The Kingdom of Chola's revolution did not stop at its borders. The Cholan population of our territory in Indo-Lemuria are starting to manifest themselves in favour of joining what they see to be their legitimate rulers."
+ mandgeneric.13.a:0 "We can't afford to devolve the situation into a war"
+ mandgeneric.13.b:0 "Nothing but empty threats"
+ mandgeneric.14.t:0 "Uturan Princedom Demands our Territory"
+ mandgeneric.14.d:0 "The Uturan government started stoking the fires revolving their claim on our colony in Utura. They are threatening to take military actions if we don't cave to their demands."
+ mandgeneric.14.a:0 "We can't afford to devolve the situation into a war"
+ mandgeneric.14.b:0 "Nothing but empty threats"
+ mandgeneric.15.t:0 "Strong ties with Kumari"
+ mandgeneric.15.d:0 "Since we decided to embrace the Kumari Mandalist revolution, our ties with them have never been so strong. Considering our vulnerable landlocked position and our comparatively weak army, we could benefit from an alliance with our newly found friends."
+ mandgeneric.15.a:0 "Send them the proposal!"
+ mandgeneric.15.b:0 "Our plans lie elsewhere"
+ mandgeneric.16.t:0 "Meru Kumari invites us to an alliance"
+ mandgeneric.16.d:0 "The Meru Kumari government's rhetoric has been progressively more positive to us. An alliance has been proposed to cement our good relations and secure our southern friends."
+ mandgeneric.16.a:0 "This is but the foundation of something much greater!"
+ mandgeneric.16.b:0 "This goes against our interests"
+ mandgeneric.17.t:0 "Kumari invites us to join the alliance"
+ mandgeneric.17.d:0 "We were invited by our Mandalist friends to join their alliance to protect what was gained by the revolution."
+ mandgeneric.17.a:0 "This is but the foundation of something much greater!"
+ mandgeneric.17.b:0 "This goes against our interests"
  
  
  
@@ -47,14 +74,16 @@
  mandalists_defeated:0 "Mandalists Defeated"
  mandalists_victorious:0 "Mandalists Victorious"
  
- KUM_casualties:0 "Mandalist sympathizers in our territory will join the rebellion"
- CLA_casualties:0 "Mandalist sympathizers in our territory will join the rebellion"
- LSN_casualties:0 "Mandalist sympathizers in our territory will join the rebellion"
+ kandam_confederacy:0 "Kumarikkandam"
+ MAN_casualties:0 "Mandalist sympathizers in our territory will join the rebellion"
  
  MAN_insurrection:0 "Popular Insurrection"
  MAN_defeatism:0 "Defeatism"
  MAN_nonaligned_idea:0 "Mandalists in the Government"
  MAN_mandalist_guerrillas_debuff:0 "Mandalist Terror"
- MAN_mandalist_guerrillas_debuff_0:0 "Mandalist Terror"
  MAN_mandalist_guerrillas_debuff_1:0 "Mandalist Terror"
  MAN_mandalist_guerrillas_debuff_2:0 "Mandalist Terror"
+ MAN_mandalist_guerrillas_debuff_3:0 "Mandalist Terror"
+ MAN_angry_mandalists:0 "Suppressing Mandalists"
+ 
+ MAN_white_peace_tooltip:0 "Mandalists take the government and the war ends."
