--- a/localisation/AML_loading_tips_l_english.yml
+++ b/localisation/AML_loading_tips_l_english.yml
@@ -25,14 +25,14 @@
  LOADING_TIP_110:0 "Everything the sea touches is ours\n - Atlantean Marine Motto"
  LOADING_TIP_111:0 "\"Atlantean air power? Ha! A group of frightened school children with kites could do better!\"\n - German Messerschmitt pilot"
  LOADING_TIP_112:0 " The People \n The Gods \n The State \n - Inscription on the wall of the Blue Forum"
- LOADING_TIP_113:0 "\"Not bad for a frightened school boy with a kite? Eh, Fritz?\"\n - Capt. Pergin Texuret, Atlantean Bomber Pilot \n 1945, over Berlin"
+ LOADING_TIP_113:0 "\"Not bad for a frightened school boy with a kite! Eh, Fritz?\"\n - Capt. Pergin Texuret, Atlantean Bomber Pilot \n 1945, over Berlin"
  LOADING_TIP_114:0 "\"PAV VAKEA!\"\n - Battlecry heard on Crescent Beach, Atlantean invasion of Northern Germany"
  LOADING_TIP_115:0 "\"God does not intend for the atom to be split for war, no matter what the Americans may say.\"\n - Atlantean President Avaskanta Carras"
  LOADING_TIP_116:0 "\"Every damned time! The Germans ruined Napoleon, they started the Great War and now they're at it again!\"\n - Augustin Lefebvre, Prime Minister of Côte des Manchots"
- LOADING_TIP_117:0 "\"The German Army is so good at playing it by ear because it does its homework, After all they were taught how to cope when the floor falls from under them.\"\n - General Nagutrul Mixernet, Atlantean High Command"
+ LOADING_TIP_117:0 "\"The German Army is so good at playing it by ear because it does its homework.\"\n - General Nagutrul Mixernet, Atlantean High Command"
  LOADING_TIP_118:0 "\"A state has no eternal allies and no perpetual enemies. Only its interests are eternal and perpetual.\"\n - Horujj Uaqril"
  LOADING_TIP_119:0 "\"Loyalty is a false concept; it can be switched, changed, challenged, and even used as an excuse to hurt the ones it’s for.\"\n - Party Leader Uorq Fasmiqr, Goprug Homeland Party" 
  LOADING_TIP_120:0 "\"Freedom without laws means anarchy; laws without freedom means tyranny.\"\n - Kampfgruppeführer T. Degurechaff, F.S.M. Freikorps"
  LOADING_TIP_121:0 "\"If the public understood the true dangers of the so called 'Communist Revolution' they would spontaneously rise up and march on Moscow with any weapon they could find.\"\n - Robert Haining, Queen's Minister of Artura " 
- LOADING_TIP_122:0 "\"When I said 'defend our island whatever the cost may be.' I meant it. If Lemuria is that cost so be it.\"\n - Winston Churchill, discussing the chaos in Lemuria" 
- LOADING_TIP_123:0 "\"When death stares at me, I shouldn't close my eyes and pray for it, I should smirk at the very concept of it and i owe those countless soldiers an answer cause of my gambles, they have faced many and i am responsible for their countless deaths.\"\n - General George Livingston III of British Lemuria " #Synthor liked it
+ LOADING_TIP_122:0 "\"When I said 'defend our island whatever the cost may be.' I meant it. If Lemuria is that cost then so be it.\"\n - Winston Churchill, discussing the chaos in Lemuria" 
+ LOADING_TIP_123:0 "\"When death stares at me I shouldn't close my eyes and pray for it; I should smirk at the very concept of it. I owe those countless soldiers an answer cause of my gambles. They have faced my many gambles and when wrong I am responsible for their countless deaths.\"\n - General George Livingston III of British Lemuria "
