--- a/localisation/AML_mandalism_l_english.yml
+++ b/localisation/AML_mandalism_l_english.yml
@@ -52,6 +52,15 @@
  mandgeneric.17.d:0 "We were invited by our Mandalist friends to join their alliance to protect what was gained by the revolution."
  mandgeneric.17.a:0 "This is but the foundation of something much greater!"
  mandgeneric.17.b:0 "This goes against our interests"
+ mandgeneric.18.t:0 "Mandalist Movement Thwarted in Kalari"
+ mandgeneric.18.d:0 "Asanvarinnu and his army have been crushed by the Kalari army. Any hope of the revolutionaries in our country are now lost."
+ mandgeneric.18.a:0 "Finally an end to the Orange Terror!"
+ mandcapital.1.t:0 "Fleeing Capitalists"
+ mandcapital.1.d:0 "The Mandalist revolutions scared the many investors that had their money in Indo-Lemurian countries. As we showed our compromise to defend the international capital in our lands, many of such investors are relocating their equipment to our lands, if we can manage to find a place for them."
+ mandcapital.1.a:0 "Bring the money!"
+ mandcapital.2.t:0 "Fleeing Capitalists"
+ mandcapital.2.d:0 "The Mandalist revolutions scared the many investors that had their money in Indo-Lemurian countries. While we were busy embroiled in the drama that surrounded the revolution, these capitalists were dismantling many factory equipments and machines. Yesterday, many factories were found empty. Rumors have that they are looking to other countries in the region to reinstall the machinery."
+ mandcapital.2.a:0 "Parasites!"
  
  
  
@@ -87,3 +96,26 @@
  MAN_angry_mandalists:0 "Suppressing Mandalists"
  
  MAN_white_peace_tooltip:0 "Mandalists take the government and the war ends."
+ 
+ 
+ 
+ KUM_capitalflight:0 "Repatriate Capitalist Property from Kumari"
+ KLK_capitalflight:0 "Repatriate Capitalist Property from Kalari"
+ CLA_capitalflight:0 "Repatriate Capitalist Property from Chola"
+ MKU_capitalflight:0 "Repatriate Capitalist Property from Meru Kumari"
+ LSN_capitalflight:0 "Repatriate Capitalist Property from Lasnova"
+ UTU_capitalflight:0 "Repatriate Capitalist Property from the Uturan Princedom"
+ SDU_capitalflight:0 "Repatriate Capitalist Property from Siduru"
+ capitalflight_tooltip:0 "Allows for decisions to repatriate property from fleeing capitalists from Mandalist countries"
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
