--- a/localisation/AML_tech_l_english.yml
+++ b/localisation/AML_tech_l_english.yml
@@ -300,9 +300,9 @@
  ATL_amphibious_mechanized_equipment_2:0 "Wotarnial 781-Tumutúnkixe"
  ATL_amphibious_mechanized_equipment_2_short:0 "Wot/781-Tm"
  ATL_amphibious_mechanized_equipment_2_desc:0 "A very large tracked vehicle, the Wot/781-Tm was built for usage in the heavily defended beaches of Normandy. It was extensively used in Europe, from the D-Day invasions to the crossing of the Rhine."
- ATL_gw_tank_equipment:0 "Gudarturak 100-Aŧekindhedeko"
- ATL_gw_tank_equipment_short:0 "Gud/100-Azk"
- ATL_gw_tank_equipment_desc:0 "The Gud/100-Azk was a rushed experiment for closing the gap between the lagging Atlantean Army and the European powers. It is loosely based on the French Renault FT."
+ ATL_gw_tank_equipment:0 "Gudarturak 100-Atkindo-Zehedek"
+ ATL_gw_tank_equipment_short:0 "Gud/100-Akz"
+ ATL_gw_tank_equipment_desc:0 "The Gud/100-Akz was a rushed experiment for closing the gap between the lagging Atlantean Army and the European powers. It is loosely based on the French Renault FT."
  ATL_light_tank_equipment_1:0 "Burgusamin 200-Atkindo-Čanak"
  ATL_light_tank_equipment_1_short:0 "Bur/200-Ak-Č"
  ATL_light_tank_equipment_1_desc:0 "The Bur/200-Ak-Č is the first tank to enter service in the Atlantean army. Designed by Burgusamin Motor, this diminute tank fits three crewmen. It was first introduced in 1935 and equipped one mobile division."
