--- a/localisation/BL_civil_war_l_english.yml
+++ b/localisation/BL_civil_war_l_english.yml
@@ -11,24 +11,25 @@
  blm.4.t:0 "Arcadia Rebels!"
  blm.4.d:0 "The Arcadians, ethnically Italians for the most part, have declared themselves a 'free' people. They're really just anarchists and fascists in disguise fighting against the rightful government. Clearly, the instability of the past months is going to spread unless we do something drastic."
  blm.4.a:0 "Declare a Military Government"
- blm.4.b:0 "Allow them independence"
+ blm.4.b:0 "Allow them some independence"
+ blm.4.c:0 "Grant them full independence"
  blm.5.t:0 "Annexation of Suisse Colony"
  blm.5.d:0 "Suisse has long been administered by a small group of bureaucrats who have enjoyed far too much freedom. Almost 30 years ago the Home Islands placed them under our watchcare but until now we've been content to allow them their freedom. No more."
  blm.5.1:0 "Begin integrating their bureaucracy"
  blm.6.t:0 "The Werreurbro Rebellion"
  blm.6.d:0 "The French and Bretons living in the far west of British Lemuria have presented a set of ridiculous demands. They claim that the British majority of the nation has been oppressing them and that they will either have independence or war."
  blm.6.a:0 "Prepare the attack"
- blm.6.b:0 "Grant their independence"
+ blm.6.b:0 "Grant them some independence"
  blm.6.c:0 "They're independent now"
  blm.7.t:0 "Audenshyre Declares Independence"
  blm.7.d:0 "Long a home of dreamers, artists, and a sizeable contingent of pacifists, Audenshyre has risen up against the central government. They declare that they do not want war, but they are unwilling to take part in the necessary suppression of the rebelling areas."
  blm.7.a:0 "Don't attack them, yet"
- blm.7.b:0 "We won't stop them"
+ blm.7.b:0 "They'll pay for this"
  blm.7.c:0 "They're independent now"
  blm.8.t:0 "The Qlach Avengers"
  blm.8.d:0 "The Qlach, those insane natives who live in the depths of the Ackerson Desert, have united behind the banner of a well know terrorist group, the Qlach Avengers. They claim that their land has been systematically stolen from them and that they are the rightful heirs of Lemuria. Despite the utter ridiculousness of their claims they have gathered and armed an unfortunately impressive number of men."
  blm.8.a:0 "Suppress the natives"
- blm.8.b:0 "Grant native independence"
+ blm.8.b:0 "Grant native independence (Puppet)"
  blm.8.c:0 "Allow them their independence"
  blm.9.t:0 "Northern Ackerson Desert Seized!"
  blm.9.d:0 "The Kalari have finally gone too far. They have seized upon the opportunity presented by the groups in our nation rebelling to annex the northern portions of the Ackerson Desert. It doesn't matter that there are a number of cities that still view themselves as Kalari, they have been under the British Lemurian flag for over 50 years. That land belongs to British Lemuria!"
@@ -38,7 +39,6 @@
  blm.10.d:0 "We always knew that the spectre of Communism was a danger to all civilized nations, but now that spectre has possessed a large section of the western part of the nation. "
  blm.10.a:0 "We shall eliminate them"
  blm.10.b:0 "Acknowledge the Workers Union"
- blm.10.c:0 "Grant their independence"
  blm.11.t:0 "The Rise of the Anarchists"
  blm.11.d:0 "Sometimes it is hard to be right all the time. The Communists are now struggling against their own rebels, a ragtag group of idiots calling themselves anarchists. How they could possibly claim to represent the will of the people is simply unfathomable. They wish to destroy all governmental institutions and replace them with... well, anarchy."
  blm.11.a:0 "We'll fight them, too!"
