--- a/localisation/BL_civil_war_l_english.yml
+++ b/localisation/BL_civil_war_l_english.yml
@@ -15,7 +15,7 @@
  blm.4.c:0 "Grant them full independence"
  blm.5.t:0 "Annexation of Suisse Colony"
  blm.5.d:0 "Suisse has long been administered by a small group of bureaucrats who have enjoyed far too much freedom. Almost 30 years ago the Home Islands placed them under our watchcare but until now we've been content to allow them their freedom. No more."
- blm.5.1:0 "Begin integrating their bureaucracy"
+ blm.5.a:0 "Begin integrating their bureaucracy"
  blm.6.t:0 "The Werreurbro Rebellion"
  blm.6.d:0 "The French and Bretons living in the far west of British Lemuria have presented a set of ridiculous demands. They claim that the British majority of the nation has been oppressing them and that they will either have independence or war."
  blm.6.a:0 "Prepare the attack"
@@ -84,3 +84,12 @@
  blm.33.t:0 "The Military Crushes Republican Forces"
  blm.33.d:0 "The so-called Republican Forces have finally been defeated. Their avowed goals of democracy and freedom are obviously good, but in reality they were just a front for Communists and Anarchists. The power of the central government of British Lemuria has been reestablished across the lands claimed by the Republicans. Now we must begin the painful process of rebuilding a deeply divided nation."
  blm.33.a:0 "Rightful government restored!"
+ blm.60.t:0 "Communists Organizing"
+ blm.60.d:0 "The rumors that the worker unions were organizing to overthrow the government were true. Although the central regions are still formally controlled by our forces, in practice the region has been so violent lately that there are effectively entire cities controlled by communist militias."
+ blm.60.a:0 "The storm is getting stronger"
+ people_pissed_off_tt:0 "Belligerent Government: $VALUE|=-%0$"
+ ARCpeople_pissed_off_tt:0 "Aggressive Actions in Arcadia: $VALUE|=-%0$"
+ WRBpeople_pissed_off_tt:0 "Aggressive Actions in Werreurbro: $VALUE|=-%0$"
+ AUDpeople_pissed_off_tt:0 "Aggressive Actions in Audenshyre: $VALUE|=-%0$"
+ QLApeople_pissed_off_tt:0 "Aggressive Actions in Qlach: $VALUE|=-%0$"
+ FLMpeople_pissed_off_tt:0 "Aggressive Actions in Free Lemuria: $VALUE|=-%0$"
