--- a/localisation/BLM_l_english.yml
+++ b/localisation/BLM_l_english.yml
@@ -4,6 +4,12 @@
  develop_oil_extraction_district:0 "Build an Oil Extraction District in Anchwhirram"
  develop_oil_fields:0 "Build Pumps in the Oil Fields"
  build_refineries:0 "Build a Refining Station in Anchwhirram"
+ BLM_recore:0 "Reestablish Cores"
+ recore_arcadia_republic:0 "Solidify Control in Arcadia"
+ recore_werreurbro:0 "Solidify Control of the Western Shyres"
+ recore_audenshyre:0 "Solidify Control in Audenshyre"
+ recore_qlach:0 "Solidify Control in the Ackerson Desert"
+ recore_workers_rep_of_lem:0 "Solidify Control in the West-Central Shyres"
  
  BLM_our_culture:0 "Our culture"
  BLM_our_culture_desc:0 "not finished"
