--- a/localisation/BLM_l_english.yml
+++ b/localisation/BLM_l_english.yml
@@ -10,6 +10,9 @@
  recore_audenshyre:0 "Solidify Control in Audenshyre"
  recore_qlach:0 "Solidify Control in the Ackerson Desert"
  recore_workers_rep_of_lem:0 "Solidify Control in the West-Central Shyres"
+ recore_flm:0 "Solidify Control in the Core Shyres"
+ recore_artura:0 "Solidify Control in the Arturan Shyres"
+ recore_sss:0 "Solidify Control in Suisse Colony"
  
  BLM_our_culture:0 "Our culture"
  BLM_our_culture_desc:0 "not finished"
