BLM stuff and Atlantean naming convention

--- a/localisation/ATL_l_english.yml
+++ b/localisation/ATL_l_english.yml
@@ -360,3 +360,24 @@
  NAME_THEME_SKY: "Sky Deities"
  NAME_THEME_WIND: "Wind Deities"
  NAME_THEME_HUNTING: "Hunting Deities"
+ 
+ ATL_EQUIPMENT_VERSION_1:0 "1 Fn."
+ ATL_EQUIPMENT_VERSION_2:0 "2 Fn."
+ ATL_EQUIPMENT_VERSION_3:0 "3 Fn."
+ ATL_EQUIPMENT_VERSION_4:0 "4 Fn."
+ ATL_EQUIPMENT_VERSION_5:0 "5 Fn."
+ ATL_EQUIPMENT_VERSION_6:0 "6 Fn."
+ ATL_EQUIPMENT_VERSION_7:0 "7 Fn."
+ ATL_EQUIPMENT_VERSION_8:0 "8 Fn."
+ ATL_EQUIPMENT_VERSION_9:0 "9 Fn."
+ ATL_EQUIPMENT_VERSION_10:0 "10 Fn."
+ ATL_EQUIPMENT_VERSION_11:0 "11 Fn."
+ ATL_EQUIPMENT_VERSION_12:0 "12 Fn."
+ ATL_EQUIPMENT_VERSION_13:0 "13 Fn."
+ ATL_EQUIPMENT_VERSION_14:0 "14 Fn."
+ ATL_EQUIPMENT_VERSION_15:0 "15 Fn."
+ ATL_EQUIPMENT_VERSION_16:0 "16 Fn."
+ ATL_EQUIPMENT_VERSION_17:0 "17 Fn."
+ ATL_EQUIPMENT_VERSION_18:0 "18 Fn."
+ ATL_EQUIPMENT_VERSION_19:0 "19 Fn."
+ ATL_EQUIPMENT_VERSION_20:0 "20 Fn."
