--- a/localisation/BLM_l_english.yml
+++ b/localisation/BLM_l_english.yml
@@ -139,4 +139,6 @@
  BLM_incentivize_british_industries:0 "Incentivize British Industries"
  BLM_incentivize_british_industries_desc:0 "Any industry that can tout its British-ness (and more particularly rejects any 'Anglish' or non-Anglo-Saxon character) will receive government support in the forms of lower taxes, favorable loans, and an expedited permitting process."
  BLM_british_man:0 "The British Man"
- BLM_british_man_desc:0 "While British Lemuria has a distinct character as a dominion, we must reemphasize the inherent and essential 'British-ness' that is part of being British Lemurian. Our nation will only be the better for it."
+ BLM_british_man_desc:0 "While British Lemuria has a distinct character as a dominion, we must reemphasize the inherent and essential 'British-ness' that is part of being British Lemurian. Our nation will only be the better for it."]
+ BLM_final:0 "Federalization"
+ BLM_final2:0 "Federalization"
