--- a/localisation/ATL_l_english.yml
+++ b/localisation/ATL_l_english.yml
@@ -292,6 +292,9 @@
  conduct_raid_sicilians:0 "Attack the Sicilian Leadership"
  conduct_raid_ringvereine:0 "Wipe out the Ringvereine"
  fix_air_force:0 "Execute Air Exercises"
+ ATL_cores:0 "Colonial Integration"
+ core_takamafrika:0 "Integrate Takamafrika"
+ core_zenigal:0 "Integrate Zenigal"
  ATL_itorkanak_flag:0 "Open Conflict against the Itorkanak"
  ATL_kaprastiak_flag:0 "Open Conflict against the Kaprastiak"
  naitastarak_shock_fix:0 "Hunt Critics of the Government"
@@ -301,13 +304,7 @@
  ATL_support_the_anti_fascist_war:0 "Support the Chinese War Efforts"
  ATL_support_the_anti_fascist_war_flag:0 "Atlantis Supporting China"
  ATL_parasite_fighter:0 "Parasite Fighters"
- ATL_parasite_fighter_desc:0 "Parasite Fighters are quul xdxd"
  ATL_light_bomber:0 "Light Bombers"
- ATL_light_bomber_desc:0 "The Light Bombers are CAS airplanes with slightly more range and attack"
- mothership:0 "huhueue"
- mothership_desc:0 "sprolololo descripttsion"
- mothership_equipment:0 "Parasite Fighter Carrier"
- mothership_equipment_desc:0 "The Parasite Fighter Carrier is a strategic bomber that was converted to a mothership that carries two diminute fighters."
  ATL_VLFP_tech:0 "VLFP"
  ATL_VLFP_tech_desc:0 "Very Large Floating Platforms are floating concrete-based structures that serve a range of purposes. Atlanteans managed to turn them into large airports that can hold a few hundred airplanes."
  atlantis.1.t:0 "Search for Itorkanak Cells"
@@ -353,6 +350,8 @@
  develop_setitla_aluminium:0 "Develop Bauxite Deposits in Setitla"
  develop_sumendia_chromium:0 "Develop Sumendian Chromium Plants"
  develop_zenigal_chromium:0 "Develop Chromium Deposits in Zenigal"
+ ATL_give_refuge_ger:0 "Give refuge to German scientists"
+ ATL_give_refuge_ita:0 "Give refuge to Italian scientists"
  NAME_THEME_CHIEF: "Chief Deities"
  NAME_THEME_KNOWLEDGE: "Knowledge Deities"
  NAME_THEME_FERTILITY: "Fertility Deities"
@@ -381,3 +380,57 @@
  ATL_EQUIPMENT_VERSION_18:0 "18 Fn."
  ATL_EQUIPMENT_VERSION_19:0 "19 Fn."
  ATL_EQUIPMENT_VERSION_20:0 "20 Fn."
+ 
+ 
+ 
+ 
+ 
+ 
+ ###Atlantis Gangster
+ atlantis_gangster.1.t:0 ""
+ atlantis_gangster.1.d:0 ""
+ atlantis_gangster.1.a:0 ""
+ ATL_police_acting:0 "Police Currently Acting"
+ 
+ ATL_select_target_kapra:0 "Kaprastiak Militias Reorganizing"
+ ATL_kapra_up_tt:0 "Increases the Kaprastiak control on the state"
+ ATL_kapra_down_tt:0 "Decreases the Kaprastiak control on the state"
+ 
+ ATL_kapra_4_1:0 "Kaprastiak Sympathies in Zuhaitz"
+ ATL_kapra_4_2:0 "Kaprastiak Cells in Zuhaitz"
+ ATL_kapra_4_3:0 "Kaprastiak Areas in Zuhaitz"
+ ATL_kapra_4_4:0 "Kaprastiak Control Zuhaitz"
+ ATL_kapra_yamylaik_1:0 "Kaprastiak Sympathies in Yamylaik"
+ ATL_kapra_yamylaik_2:0 "Kaprastiak Cells in Yamylaik"
+ ATL_kapra_yamylaik_3:0 "Kaprastiak Control in Yamylaik"
+ ATL_kapra_burmiunean_1:0 "Kaprastiak Sympathies in Burmiunean"
+ ATL_kapra_burmiunean_2:0 "Kaprastiak Cells in Burmiunean"
+ ATL_kapra_burmiunean_3:0 "Kaprastiak Control in Burmiunean"
+ ATL_kapra_anoixte_1:0 "Kaprastiak Sympathies in Anoixte"
+ ATL_kapra_anoixte_2:0 "Kaprastiak Cells in Anoixte"
+ ATL_kapra_anoixte_3:0 "Kaprastiak Control in Anoixte"
+ ATL_kapra_small_cities_1:0 "Kaprastiak Controls 1 Small City"
+ ATL_kapra_small_cities_2:0 "Kaprastiak Controls 2 Small Cities"
+ ATL_kapra_small_cities_3:0 "Kaprastiak Controls 3 Small Cities"
+ ATL_kapra_small_cities_4:0 "Kaprastiak Controls 4 Small Cities"
+ ATL_kapra_small_cities_5:0 "Kaprastiak Controls 5 Small Cities"
+ 
+ ATL_kapra_944_attack:0 "Defend Burmiunean from the Kaprastiak"
+ ATL_kapra_945_attack:0 "Defend Zuhaitz from the Kaprastiak"
+ ATL_kapra_946_attack:0 "Defend Doxa from the Kaprastiak"
+ ATL_kapra_947_attack:0 "Defend Osoa from the Kaprastiak"
+ ATL_kapra_948_attack:0 "Defend Yamylaik from the Kaprastiak"
+ ATL_kapra_949_attack:0 "Defend Anoixte from the Kaprastiak"
+ ATL_kapra_963_attack:0 "Defend Taidorie from the Kaprastiak"
+ ATL_kapra_964_attack:0 "Defend Chuzaseit from the Kaprastiak"
+ ATL_kapra_965_attack:0 "Defend Tashrets from the Kaprastiak"
+ 
+ ATL_police_k_944:0 "Regain Territory in Burmiunean"
+ ATL_police_k_945:0 "Regain Territory in Zuhaitz"
+ ATL_police_k_946:0 "Regain Territory in Doxa"
+ ATL_police_k_947:0 "Regain Territory in Osoa"
+ ATL_police_k_948:0 "Regain Territory in Yamylaik"
+ ATL_police_k_949:0 "Regain Territory in Anoixte"
+ ATL_police_k_963:0 "Regain Territory in Taidorie"
+ ATL_police_k_964:0 "Regain Territory in Chuzaseit"
+ ATL_police_k_965:0 "Regain Territory in Tashrets"
