--- a/localisation/AML_tech_l_english.yml
+++ b/localisation/AML_tech_l_english.yml
@@ -433,7 +433,7 @@
  ATL_super_heavy_tank_aa_equipment_1:0 "Gudarturak 099-Haéirsexpleinrade"
  ATL_super_heavy_tank_aa_equipment_1_short:0 "Gud/099-Hés"
  ATL_super_heavy_tank_aa_equipment_1_desc:0 "The Gud/099-Hés was a proposal to make a large anti-air mobile station, which featured a modified destroyer turret. Never left the blueprints."
- ATL_modern_tank_equipment_1:0 "Juzatzhait-Wotarnial 1001-Aħaŧehedekto"
+ ATL_modern_tank_equipment_1:0 "Juzatzhait-Wotarnial 1001-Atħaŧehedeko"
  ATL_modern_tank_equipment_1_short:0 "Juz-Wot/1001-Aħz"
  ATL_modern_tank_equipment_1_desc:0 "After the success of the Juz/801-Aħz, the Atlantean army decided to move to medium multipurpose tanks. This tank was a joint venture of the prestigious Juzatzhait Inc. and the Wotarnial General Systems, to produce a universal tank to fit many different roles. Saw limited action in the Cold War, and was generally liked by its users."
  ATL_modern_tank_artillery_equipment_1:0 "Juzatzhait-Wotarnial 1001-Aŧehedeko"
