--- a/localisation/AML_loading_tips_l_english.yml
+++ b/localisation/AML_loading_tips_l_english.yml
@@ -39,4 +39,4 @@
  LOADING_TIP_124:0 "\"I no longer  believe their is a god; for if he does exist, he must be truly mad with us all.\"\n -Yohania Highcom Fighting the ?british?"
  LOADING_TIP_125:0 "\"Its only a war crime if you lose"\"\n -to be decided"
  LOADING_TIP_126:0 "\"Where is the line between losing everything, and giving it all to say that you've tried?\"\n -to be decided"
- LOADING_TIP_127:0 "\"The law is not a religious doctrine! The laws were made to help us govern ourselves... but it's been left to rule on its own. Somewhere along the line, it's been twisted into... scripture!\"\n -to be decided"
+ LOADING_TIP_127:0 "\"The law is not a religious doctrine! The laws were made to help us govern ourselves... but it's been left to rule on its own. Somewhere along the line, it's been twisted into... scripture!\"\n Yohania"
