Gangsta wars update (still not working)

--- a/localisation/ATL_l_english.yml
+++ b/localisation/ATL_l_english.yml
@@ -386,13 +386,14 @@
  
  
  
- ###Atlantis Gangster
+ ###Atlantis Gangsta
  atlantis_gangster.1.t:0 ""
  atlantis_gangster.1.d:0 ""
  atlantis_gangster.1.a:0 ""
  ATL_police_acting:0 "Police Currently Acting"
  
- ATL_select_target_kapra:0 "Kaprastiak Militias Reorganizing"
+ ATL_cooldown_kapra:0 "Kaprastiak Militias Reorganizing"
+ ATL_select_target_kapra:0 "Incoming Kaprastiak Attack"
  ATL_kapra_up_tt:0 "Increases the Kaprastiak control on the state"
  ATL_kapra_down_tt:0 "Decreases the Kaprastiak control on the state"
  
