Map Update (Stable!)

--- a/localisation/AML_state_names_l_english.yml
+++ b/localisation/AML_state_names_l_english.yml
@@ -1,14 +1,14 @@
 ﻿l_english:
- STATE_1053:0 "East Tangwan"
+ STATE_1053:0 "Puhngloi"
  STATE_1054:0 "Kurukattai"
  STATE_1055:0 "Dulgwa Mabong"
  STATE_1057:0 "Ratulismara"
  STATE_1056:0 "Gatisrahaval"
  STATE_1058:0 "Kilakkatai"
- STATE_1059:0 "Qazeni"
+ STATE_1059:0 "Tsetsa"
  STATE_1060:0 "Boranepatera"
  STATE_1061:0 "Portuguese Utura"
- STATE_1062:0 "Nulang"
+ STATE_1062:0 "Chaansau"
  STATE_807:0 "Utukalla"
  STATE_808:0 "Rengtsiu"
  STATE_809:0 "Sabavtresha"
@@ -33,8 +33,8 @@
  STATE_828:0 "Fetu"
  STATE_829:0 "Kakaha"
  STATE_830:0 "Hota"
- STATE_831:0 "Himu Island"
- STATE_832:0 "Himuiti"
+ STATE_831:0 "Angaansim"
+ STATE_832:0 "Fuungutai"
  STATE_833:0 "Havaiki"
  STATE_834:0 "Hai'ie"
  STATE_835:0 "Hi'e"
@@ -140,7 +140,7 @@
  STATE_935:0 "Südwüstenland"
  STATE_936:0 "Nordwüstenland"
  STATE_937:0 "Nybornholm"
- STATE_938:0 "Qelau"
+ STATE_938:0 "Hangshuen"
  STATE_939:0 "South Tesi"
  STATE_940:0 "Antillia"
  STATE_941:0 "Thule"
@@ -200,7 +200,7 @@
  STATE_995:0 "Gawarii"
  STATE_996:0 "Dom Henrique Islands"
  STATE_997:0 "Dangleng"
- STATE_998:0 "West Tangwan"
+ STATE_998:0 "Tangwan"
  STATE_999:0 "Yaci"
  STATE_1000:0 "Daimetarha"
  STATE_1001:0 "Vichamanshatala"
