East African changes

--- a/localisation/AML_state_names_l_english.yml
+++ b/localisation/AML_state_names_l_english.yml
@@ -1,4 +1,9 @@
 ﻿l_english:
+ STATE_1067:0 "South Sudan"
+ STATE_271:0 "Tigray-Shewa"
+ STATE_1064:0 "Yohannia"
+ STATE_1065:0 "Kaffa-Sidamo"
+ STATE_1066:0 "Hararghe-Bale"
  STATE_1053:0 "Puhngloi"
  STATE_1054:0 "Kurukattai"
  STATE_1055:0 "Dulgwa Mabong"
