--- a/localisation/AML_loading_tips_l_english.yml
+++ b/localisation/AML_loading_tips_l_english.yml
@@ -36,7 +36,7 @@
  LOADING_TIP_121:0 "\"If the public understood the true dangers of the so called 'Communist Revolution' they would spontaneously rise up and march on Moscow with any weapon they could find.\"\n - Robert Haining, Queen's Minister of Artura " 
  LOADING_TIP_122:0 "\"When I said 'defend our island whatever the cost may be.' I meant it. If Lemuria is that cost then so be it.\"\n - Winston Churchill, discussing the chaos in Lemuria" 
  LOADING_TIP_123:0 "\"When death stares at me I shouldn't close my eyes and pray for it; I should smirk at the very concept of it. I owe those countless soldiers an answer cause of my gambles. They have faced my many gambles and when wrong I am responsible for their countless deaths.\"\n - General George Livingston III of British Lemuria "
- LOADING_TIP_124:0 "\"I no longer  believe their is a god; for if he does exist... He must be truly mad! Look at the state of things!\"\n -unnamed Yohannian High Commissioner"
+ LOADING_TIP_124:0 "\"I no longer  believe their is a god - for if he does exist He must be truly mad! Look at the state of things!\"\n -unnamed Yohannian High Commissioner"
  LOADING_TIP_125:0 "\"Its only a war crime if you lose"\"\n -to be decided"
  LOADING_TIP_126:0 "\"Where is the line between losing everything, and giving it all to say that you've tried?\"\n -to be decided"
- LOADING_TIP_127:0 "\"The law is not a religious doctrine! The laws were made to help us govern ourselves... but it's been left to rule on its own. Somewhere along the line, it's been twisted into... scripture!\"\n -unnamed Yohannian government official"
+ LOADING_TIP_127:0 "\"The law is not a religious doctrine! The laws were made to help us govern ourselves... but it's been left to rule on its own. Somewhere along the line, it's been twisted into scripture!\"\n -unnamed Yohannian government official"
