--- a/localisation/replace/AML_countries_l_english.yml
+++ b/localisation/replace/AML_countries_l_english.yml
@@ -1,4 +1,16 @@
 ﻿l_english:
+ PRJ_fascism:2 "Unitary Africa"
+ PRJ_fascism_DEF:2 "Unitary Africa"
+ PRJ_democratic:0 "Yohannia"
+ PRJ_democratic_DEF:0 "Yohannia"
+ PRJ_neutrality:1 "Yohannia"
+ PRJ_neutrality_DEF:1 "Yohannia"
+ PRJ_communism:2 "People's Republic of Africa"
+ PRJ_communism_DEF:2 "the People's Republic of Africa"
+ ZEN_fascism_ADJ:1 "Zenagan"
+ ZEN_democratic_ADJ:0 "Zenagan"
+ ZEN_neutrality_ADJ:1 "Zenigalese"
+ ZEM_communism_ADJ:1 "Zenagan"
  ZEN_fascism:2 "Zenaga State"
  ZEN_fascism_DEF:2 "Zenaga State"
  ZEN_democratic:0 "Zenaga"
