--- a/localisation/replace/AML_victory_points_l_english.yml
+++ b/localisation/replace/AML_victory_points_l_english.yml
@@ -1,4 +1,6 @@
 ﻿l_english:
+ VICTORY_POINTS_14999:0 "Nakhlagluta"
+ VICTORY_POINTS_10734:0 "Bongo"
  VICTORY_POINTS_13266:0 "Mápó Tòufu"
  VICTORY_POINTS_13264:0 "Lú Dáqèn"
  VICTORY_POINTS_13263:0 "Chén Báo Tàn"
