--- a/localisation/replace/AML_victory_points_l_english.yml
+++ b/localisation/replace/AML_victory_points_l_english.yml
@@ -1,14 +1,14 @@
 ﻿l_english:
  VICTORY_POINTS_14999:0 "Nakhlagluta"
  VICTORY_POINTS_10734:0 "Bongo"
- VICTORY_POINTS_13266:0 "Mápó Tòufu"
- VICTORY_POINTS_13264:0 "Lú Dáqèn"
- VICTORY_POINTS_13263:0 "Chén Báo Tàn"
- VICTORY_POINTS_13262:0 "Huálì Biàoliang"
- VICTORY_POINTS_13249:0 "Kuìlàn Deyè Xià"
- VICTORY_POINTS_13245:0 "Āzhì"
- VICTORY_POINTS_13241:0 "Bùyào Chī Kou"
- VICTORY_POINTS_13232:0 "Qītiān Káng"
+ VICTORY_POINTS_13266:0 "Shamseng"
+ VICTORY_POINTS_13264:0 "Kheih"
+ VICTORY_POINTS_13263:0 "Yahounan"
+ VICTORY_POINTS_13262:0 "Hwutangrun"
+ VICTORY_POINTS_13249:0 "Inalurgwoi"
+ VICTORY_POINTS_13245:0 "Yimutsyu"
+ VICTORY_POINTS_13241:0 "Weyluchanao"
+ VICTORY_POINTS_13232:0 "Lyunamtsam"
  VICTORY_POINTS_13335:0 "Arapōhue"
  VICTORY_POINTS_13413:0 "Hāpua-waikawa"
  VICTORY_POINTS_13419:0 "Kōhīnui"
