Trynsuyin Rapid Industrialization

--- a/localisation/replace/AML_victory_points_l_english.yml
+++ b/localisation/replace/AML_victory_points_l_english.yml
@@ -1,13 +1,16 @@
 ﻿l_english:
  VICTORY_POINTS_14999:0 "Nakhlagluta"
+ VICTORY_POINTS_14301:0 "Not Osaka"
+ VICTORY_POINTS_14294:0 "Not Kyoto"
  VICTORY_POINTS_10734:0 "Bongo"
- VICTORY_POINTS_13266:0 "Shamseng"
+ VICTORY_POINTS_13254:0 "Not Tokyo"
+ VICTORY_POINTS_13265:0 "Shamseng"
  VICTORY_POINTS_13264:0 "Kheih"
- VICTORY_POINTS_13263:0 "Yahounan"
+ VICTORY_POINTS_13248:0 "Yahounan"
  VICTORY_POINTS_13262:0 "Hwutangrun"
  VICTORY_POINTS_13249:0 "Inalurgwoi"
- VICTORY_POINTS_13245:0 "Yimutsyu"
- VICTORY_POINTS_13241:0 "Weyluchanao"
+ VICTORY_POINTS_13241:0 "Yimutsyu"
+ VICTORY_POINTS_13245:0 "Weyluchanao"
  VICTORY_POINTS_13232:0 "Lyunamtsam"
  VICTORY_POINTS_13335:0 "Arapōhue"
  VICTORY_POINTS_13413:0 "Hāpua-waikawa"
