--- a/localisation/AML_loading_tips_l_english.yml
+++ b/localisation/AML_loading_tips_l_english.yml
@@ -41,3 +41,4 @@
  LOADING_TIP_126:0 "\"Where is the line between losing everything, and giving it all to say that you've tried?\"\n -to be decided"
  LOADING_TIP_127:0 "\"The law is not a religious doctrine! The laws were made to help us govern ourselves... but it's been left to rule on its own. Somewhere along the line, it's been twisted into scripture!\"\n -unnamed Yohannian government official"
  LOADING_TIP_128:0 "\"The distinction between a Merchant and a General is seen only by politicians who have no experience of either.\"\n -Japans puppet emperor of Trynsuyin"
+ LOADING_TIP_129:0 "\"Morally subversive, economically destructive, socially degrading, confused in its causes, devious in its results, it is the outstanding example in European history of meaningless conflict" \"\n -Dame Cicely Veronica Wedgwood"
