--- a/localisation/AML_tech_l_english.yml
+++ b/localisation/AML_tech_l_english.yml
@@ -568,10 +568,30 @@
  ATL_rocket_interceptor_equipment_3_short:0 "Wot/363 Iáxat"
  ATL_rocket_interceptor_equipment_3_desc:0 "The only rocket interceptor to see service in the Atlantean home islands, it was based on the Ré/3 concept, also carrying rockets in its nose. Due to its limited and highly specialized role, it never saw any action, and the few that were produced were later used as drones for target practicing in the cold war."
  
+ #VLFP Stuff
+ ATL_build_VLFP_dockyard:0 "VLFP Dockyard"
+ ATL_build_VLFP_dockyard_desc:0 "TBA"
+ 
+ carrier_VLFP:0 "The Very Large Annoyance"
+ carrier_VLFP_desc:0 "TBA"
+ ship_hull_carrier_vlfp:0 "VLFP TECH"
+ ship_hull_carrier_vlfp_desc:0 "not sure if this will show up"
  
  
+ vlfp_ship_secondaries:0 "VLFP Secondaries"
+ vlfp_ship_secondaries_desc:0 "TBA"
+ vlfp_ship_deck_space:0 "Very Large Deck..."
+ vlfp_ship_deck_space_desc:0 "Compensating for something?"
+ vlfp_ship_extra_fuel_tank:0 "Food water Fuel Clothes etc"
+ vlfp_ship_extra_fuel_tank_desc:0 "TBA"
+ vlfp_ship_anti_air:0 "VLFP Anti Air"
+ vlfp_ship_anti_air_desc:0 "TBA"
+ vlfp_carrier_ship_engine:0 " 32 some odd boilers make this thing Go"
+ vlfp_carrier_ship_engine_desc:0 "TBA"
  
- 
+ EQ_MOD_CAT_vlfp_ship_deck_space_TITLE:0 "Deck Space"
+ EQ_MOD_CAT_vlfp_ship_secondaries_TITLE:0 "Secondaries"
+ EQ_MOD_CAT_vlfp_ship_extra_fuel_tank_TITLE:0 "Fuel and Comodities"
  
  
  
