--- a/localisation/AML_loading_tips_l_english.yml
+++ b/localisation/AML_loading_tips_l_english.yml
@@ -35,7 +35,7 @@
  LOADING_TIP_120:0 "\"Freedom without laws means anarchy; laws without freedom means tyranny.\"\n - Kampfgruppeführer T. Degurechaff, F.S.M. Freikorps"
  LOADING_TIP_121:0 "\"If the public understood the true dangers of the so called 'Communist Revolution' they would spontaneously rise up and march on Moscow with any weapon they could find.\"\n - Robert Haining, Queen's Minister of Artura " 
  LOADING_TIP_122:0 "\"When I said 'defend our island whatever the cost may be.' I meant it. If Lemuria is that cost then so be it.\"\n - Winston Churchill, discussing the chaos in Lemuria" 
- LOADING_TIP_123:0 "\"When death stares at me I shouldn't close my eyes and pray for it; I should smirk at the very concept of it. I owe those countless soldiers an answer cause of my gambles. They have faced my many gambles and when wrong I am responsible for their countless deaths.\"\n - General George Livingston III of British Lemuria "
+ LOADING_TIP_123:0 "\"When death stares at me I shouldn't close my eyes and pray for it; I should smirk at the very concept of it. I owe those countless soldiers an answer cause of my gambles. They have faced my many gambles and when wrong I am responsible for their countless deaths.\"\n - General George Livingston III of British Lemuria " #Thursa can you trim this to fit in the box?
  LOADING_TIP_124:0 "\"I no longer  believe their is a god - for if he does exist He must be truly mad! Look at the state of things!\"\n -unnamed Yohannian High Commissioner"
  LOADING_TIP_125:0 "\"Its only a war crime if you lose"\"\n -to be decided"
  LOADING_TIP_126:0 "\"Where is the line between losing everything, and giving it all to say that you've tried?\"\n -Trynusyin puppet emperor"
@@ -43,4 +43,5 @@
  LOADING_TIP_128:0 "\"The distinction between a Merchant and a General is seen only by politicians who have no experience of either.\"\n -Japans puppet emperor of Trynsuyin or Atlatnis"
  LOADING_TIP_129:0 "\"Morally subversive, economically destructive, socially degrading, confused in its causes, devious in its results, it is the outstanding example in European history of meaningless conflict" \"\n -Dame Cicely Veronica Wedgwood"
  LOADING_TIP_130:0 "\"What happens when Light shines so painfully bright, that it becomes more terrible than Darkness?"\"\n - Upon learning about the nuclear detonations on japan"
+ LOADING_TIP_131:0 "\"We came for the soft belly of Europe, and found a tough old gut: a nightmare of mountains and concrete and machine guns."\"\n - Atlantis in Italy"
  
