Revert "Removed Second British Columnia"
This reverts commit 615b169b4076b2400c5b184ad311f4bf93f0b3d9.

--- a/localisation/AML_state_names_l_english.yml
+++ b/localisation/AML_state_names_l_english.yml
@@ -161,7 +161,7 @@
  STATE_950:0 "Jefferson"
  STATE_951:0 "Lincoln"
  STATE_952:0 "New Caledonia"
- STATE_953:0 "Ragnarok"
+ STATE_953:0 "British Columbia"
  STATE_954:0 "Valhalla"
  STATE_955:0 "Athabaska"
  STATE_956:0 "Superior"
