Real gangsta stuff

--- a/localisation/ATL_l_english.yml
+++ b/localisation/ATL_l_english.yml
@@ -390,7 +390,10 @@
  atlantis_gangster.1.t:0 ""
  atlantis_gangster.1.d:0 ""
  atlantis_gangster.1.a:0 ""
+ 
  ATL_police_acting:0 "Police Currently Acting"
+ ATL_factory_curfew_idea:0 "Curfews in Industrial Areas"
+ ATL_dockyard_curfew_idea:0 "Curfews in Dockyard Areas"
  
  ATL_cooldown_kapra:0 "Kaprastiak Militias Reorganizing"
  ATL_select_target_kapra:0 "Incoming Kaprastiak Attack"
