Worldwide mad deadly gangsters from Atlantis

--- a/localisation/ATL_l_english.yml
+++ b/localisation/ATL_l_english.yml
@@ -428,6 +428,42 @@
  ATL_kapra_963_attack:0 "Defend Taidorie from the Kaprastiak"
  ATL_kapra_964_attack:0 "Defend Chuzaseit from the Kaprastiak"
  ATL_kapra_965_attack:0 "Defend Tashrets from the Kaprastiak"
+  
+  
+ ATL_cooldown_itork:0 "Itorkanak Militias Reorganizing"
+ ATL_select_target_itork:0 "Incoming Itorkanak Attack"
+ ATL_itork_up_tt:0 "Increases the Itorkanak control on the state"
+ ATL_itork_down_tt:0 "Decreases the Itorkanak control on the state"
+ 
+ ATL_itork_4_1:0 "Itorkanak Sympathies in Zuhaitz"
+ ATL_itork_4_2:0 "Itorkanak Cells in Zuhaitz"
+ ATL_itork_4_3:0 "Itorkanak Areas in Zuhaitz"
+ ATL_itork_4_4:0 "Itorkanak Control Zuhaitz"
+ ATL_itork_yamylaik_1:0 "Itorkanak Sympathies in Yamylaik"
+ ATL_itork_yamylaik_2:0 "Itorkanak Cells in Yamylaik"
+ ATL_itork_yamylaik_3:0 "Itorkanak Control in Yamylaik"
+ ATL_itork_burmiunean_1:0 "Itorkanak Sympathies in Burmiunean"
+ ATL_itork_burmiunean_2:0 "Itorkanak Cells in Burmiunean"
+ ATL_itork_burmiunean_3:0 "Itorkanak Control in Burmiunean"
+ ATL_itork_anoixte_1:0 "Itorkanak Sympathies in Anoixte"
+ ATL_itork_anoixte_2:0 "Itorkanak Cells in Anoixte"
+ ATL_itork_anoixte_3:0 "Itorkanak Control in Anoixte"
+ ATL_itork_small_cities_1:0 "Itorkanak Controls 1 Small City"
+ ATL_itork_small_cities_2:0 "Itorkanak Controls 2 Small Cities"
+ ATL_itork_small_cities_3:0 "Itorkanak Controls 3 Small Cities"
+ ATL_itork_small_cities_4:0 "Itorkanak Controls 4 Small Cities"
+ ATL_itork_small_cities_5:0 "Itorkanak Controls 5 Small Cities"
+ 
+ ATL_itork_944_attack:0 "Defend Burmiunean from the Itorkanak"
+ ATL_itork_945_attack:0 "Defend Zuhaitz from the Itorkanak"
+ ATL_itork_946_attack:0 "Defend Doxa from the Itorkanak"
+ ATL_itork_947_attack:0 "Defend Osoa from the Itorkanak"
+ ATL_itork_948_attack:0 "Defend Yamylaik from the Itorkanak"
+ ATL_itork_949_attack:0 "Defend Anoixte from the Itorkanak"
+ ATL_itork_963_attack:0 "Defend Taidorie from the Itorkanak"
+ ATL_itork_964_attack:0 "Defend Chuzaseit from the Itorkanak"
+ ATL_itork_965_attack:0 "Defend Tashrets from the Itorkanak"
+ 
  
  ATL_police_k_944:0 "Regain Territory in Burmiunean"
  ATL_police_k_945:0 "Regain Territory in Zuhaitz"
